<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/city_background"
    tools:context=".Activity.OnBordingScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_gravity="center"
        android:text="@string/alreay"
        android:textColor="@color/black"
        android:fontFamily="@font/metropolis_medium"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txt_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/btn_background"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:text="@string/log_in"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/metropolis_medium"
        android:elevation="@dimen/_5sdp"
        android:backgroundTint="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_gravity="center"
        android:text="@string/donthaveaccount"
        android:textColor="@color/black"
        android:fontFamily="@font/metropolis_medium"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:elevation="@dimen/_5sdp"
        android:background="@drawable/btn_background"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:fontFamily="@font/metropolis_medium"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:src="@drawable/app_actor_man"/>

    </LinearLayout>

</LinearLayout>