<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/white_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_discountOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_bold"

            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/change_reminder"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/txt_dontCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/metropolissemibold"
            android:text="@string/dontcancel"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableLeft="@drawable/ic_icon_location_on"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@color/light_grey"/>

        <TextView
            android:id="@+id/txtcancelOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolissemibold"
            android:text="@string/cancel_now"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_icon_close_circle"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>

    </LinearLayout>

</LinearLayout>